# hackcqooc

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt  sample.py  setup.py
.github/workflows/: publish.yaml  run_pytest.yaml
docs/: api_url.md  core.md  msg.md  processor.md  readme.md  request.md  test.md  user.md
hackcqooc/: __init__.py  api_url.py  core.py  msg.py  processer.py  processor.py  request.py  user.py
src/: hackcqooc.py
tests/: .coveragerc  test_api_url.py  test_core.py  test_hackcqooc.py  test_msg.py  test_processer.py  test_processor.py  test_request.py  test_user.py
